# recreation-of-doom

./: CMakeLists.txt  Dockerfile  README.md  main.c
include/glad/: gl.h
lib/: libglut.3.12.0.dylib  libglut.3.dylib
src/: config.h  engine.c  engine.h  gamestate.c  gamestate.h  glad.c  glfw_tutorial.c  graphics.c  graphics.h  input.c  input.h  loadmap.c  loadmap.h  main.c  movement.c  movement.h  utils.c  utils.h
